--- a/src/js/common-externals/package.json
+++ b/src/js/common-externals/package.json
@@ -32,6 +32,7 @@
     "select2": "^4.1.0-RC.0",
     "select2-bootstrap-5-theme": "^1.3",
     "pivottable": "^2.23.0",
+    "plotly.js": "^1.58.4",
     "sortablejs": "=1.14.0",
     "subtotal": "^1.11.0-alpha.0",
     "vue": "^3.4.24"
