--- a/src/js/common-externals/package.json
+++ b/src/js/common-externals/package.json
@@ -28,6 +28,7 @@
     "jquery-migrate": "^3.4.1",
     "jquery-ui": "^1.13.2",
     "jquery-validation": "1.20.0",
+    "mermaid": "^10.9.1",
     "moment": "^2.30.1",
     "select2": "^4.1.0-RC.0",
     "select2-bootstrap-5-theme": "^1.3",
@@ -35,6 +36,7 @@
     "plotly.js": "^1.58.4",
     "sortablejs": "=1.14.0",
     "subtotal": "^1.11.0-alpha.0",
+    "svg-pan-zoom": "^3.6.1",
     "vue": "^3.4.24"
   },
     "devDependenciesComment": {
