[FIX][REF] Thumbnail generation crashes on SVG files; Add SVG Rasterization support in GD with php-svg --- * [FIX] SVG Rasterization in GD with php-svg
[FIX] Linter errors

Fix linter errors

Fix linter errors in Gd.php

Fix blank line error

Remove white space in Gd.php

Update composer.lock with new dependencies

Add php-svg dependency to vendor_bundled

Alphabetize dependencies in vendor_bundled/composer.json

composer update meyfa/php-svg

Update svg in composer

Update svg in composer

See merge request tikiwiki/tiki!5716

--- a/vendor_bundled/composer.json
+++ b/vendor_bundled/composer.json
@@ -209,6 +209,7 @@
         "mautic/api-library": "~3.0.0",
         "mediumjs/mediumjs": "1.0.1",
         "melbahja/seo": "^2.0",
+        "meyfa/php-svg": "^0.16",
         "michelf/php-smartypants": "^1.8.1",
         "montefuscolo/xmpp": "dev-php8.1",
         "mottie/tablesorter": "^2.28",
