[REF] Change christian-vigh-phpclasses/PdfToText with smalot/pdfparser --- * [REF] Change christian-vigh-phpclasses/PdfToText with smalot/pdfparser
See merge request tikiwiki/tiki!5841

--- a/vendor_bundled/composer.json
+++ b/vendor_bundled/composer.json
@@ -138,7 +138,6 @@
         "bacon/bacon-qr-code": "^2.0.0",
         "candy-chat/xmpp-prebind-php": "dev-master",
         "cboden/ratchet": "^0.4",
-        "christian-vigh-phpclasses/pdftotext": "^1.6.0",
         "ckeditor/ckeditor": "<=4.22.1",
         "codercat/jwk-to-pem": "^1.1",
         "composer/semver": "^3.2",
@@ -252,6 +251,7 @@
         "sentry/sdk": "^3.3",
         "simile_timeline/simile_timeline": "2.3.0",
         "slm/mail": "^4.2",
+        "smalot/pdfparser": "^2.11",
         "smarty/smarty": "^5.0",
         "steverhoades/oauth2-openid-connect-client": "^2.0.0",
         "studio-42/elfinder": "~2.1",
