--- a/src/js/common-externals/package.json
+++ b/src/js/common-externals/package.json
@@ -22,6 +22,7 @@
     "dompurify": "^2.3.3",
     "driver.js": "^1.3.1",
     "interactjs" : "^1.10",
+    "jqdoublescroll": "^1.0.0",
     "jquery": "^3.7.1",
     "jquery-colorbox": "^1.6.4",
     "jquery-form": "^4.3.0",
