--- a/src/js/common-externals/package.json
+++ b/src/js/common-externals/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@shoelace-style/shoelace": "^2.15.1",
+    "@toast-ui/editor": "^3.2.2",
     "@zxing/library": "^0.21.2",
     "animejs": "~3.2.2",
     "bootstrap": "^5.3.3",
