--- a/vendor_bundled/composer.json
+++ b/vendor_bundled/composer.json
@@ -241,6 +241,7 @@
         "rambomst/php-bounce-handler": "^1.6",
         "rangy/rangy": "1.3.0",
         "react/child-process": "^0.6.4",
+        "ramsey/uuid": "^4.7",
         "rmm5t/jquery-timeago": "^1.5",
         "robicch/jquery-gantt": "^6.3",
         "rubix/extras": "2.0.0-beta",
