--- a/src/js/common-externals/package.json
+++ b/src/js/common-externals/package.json
@@ -22,6 +22,7 @@
     "converse.js": "^10.1.7",
     "dompurify": "^2.3.3",
     "driver.js": "^1.3.1",
+    "fitvids": "^2.1.1",
     "jqdoublescroll": "^1.0.0",
     "interactjs" : "^1.10",
     "jquery": "^3.7.1",
