--- a/src/js/common-externals/package.json
+++ b/src/js/common-externals/package.json
@@ -31,6 +31,7 @@
     "jquery-migrate": "^3.4.1",
     "jquery-ui": "^1.13.2",
     "jquery-validation": "1.20.0",
+    "jquery-zoom": "^1.7.21",
     "mermaid": "^10.9.1",
     "moment": "^2.30.1",
     "select2": "^4.1.0-RC.0",
