[UPD] Update all build tools except happy-dom to latest version.  Add folders... --- * [UPD] Update all build tools except happy-dom to latest version.  Add folders to server:watch:ignored to exclude them from vitest and stop running out of file descriptors.  happy-dom vas kept at version 14 because the tests for vue-widgets/element-plus-ui are currently incompatible with version 15.
See merge request tikiwiki/tiki!6040

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -580,7 +580,8 @@ unit-tests-node:
   image:
     name: ${DEPENDENCY_PROXY_PREFIX}${NODE_IMAGE}
   script:
-    - npm run test
+    - npm run testci
+  coverage: '/All files(?:[^|]*\|){4}\s*(\S+)/'
 
 #
 # Package this Tiki build
