--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "clean:scss": "npm run clean -w src/scss",
     "clean": "concurrently \"npm:clean:*\"",
     "build:generateIconList": "node lib/iconGeneratorNodeWrapper.js",
-    "test": "vitest --config=src/js/vite.config.mjs --coverage"
+    "test": "vitest --config=src/js/vite.config.mjs --coverage",
+    "testci": "vitest --config=src/js/vite.config.mjs --coverage --run"
   },
   "engines": {
     "npm": ">=9.0.0 <11",
@@ -54,30 +55,31 @@
   },
   "depencenciesCommentSingleLibs": {},
   "devDependencies": {
-    "@guanghechen/rollup-plugin-copy": "^6.0.0-alpha.9",
-    "@stylistic/eslint-plugin-js": "^2.2.1",
+    "@guanghechen/rollup-plugin-copy": "^6.0.2",
+    "@stylistic/eslint-plugin-js": "^2.9.0",
     "@testing-library/vue": "^8.1.0",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vitest/coverage-v8": "^1.6.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitest/coverage-v8": "^2.1.2",
     "check-engines": "^1.6.0",
-    "concurrently": "^8.2.2",
+    "concurrently": "^9.0.1",
     "es-module-shims": "^1.10.0",
-    "eslint": "^9.5.0",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.26",
-    "glob": "^10.4.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.29",
+    "glob": "^11.0.0",
     "happy-dom": "^14.12.0",
-    "npm-run-all2": "^6.2.0",
-    "prettier": "^3.3.2",
+    "npm-run-all2": "^6.2.3",
+    "prettier": "^3.3.3",
     "rollup-plugin-visualizer": "^5.12.0",
-    "unplugin-auto-import": "^0.17.6",
-    "unplugin-vue-components": "^0.27.0",
-    "vite": "^5.3.1",
-    "vite-plugin-static-copy": "^1.0.5",
-    "vitest": "^1.6.0"
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.8",
+    "vite-plugin-static-copy": "^2.0.0",
+    "vitest": "^2.1.2"
   },
   "devDepencenciesCommentWillAlsoBeAvailableAsDevDependenciesInWorkspace": {
+    "@guanghechen/rollup-plugin-copy": "https://github.com/guanghechen/node-scaffolds/tree/@guanghechen/rollup-plugin-copy@6.0.1/packages/rollup-plugin-copy",
     "es-module-shims": "https://github.com/guybedford/es-module-shims. Copied to be available as an external, but not in common-externals, because it will not be included from import-maps",
     "@vitejs/plugin-vue": "https://github.com/vitejs/vite-plugin-vue/blob/main/packages/plugin-vue/CHANGELOG.md",
     "eslint": "",
