[FIX] package.json:  downgrade glob package to version 10 vecause 11.0.0 had a... --- * [FIX] package.json:  downgrade glob package to version 10 vecause 11.0.0 had a bad engine specifier that skipped node 21
See merge request tikiwiki/tiki!6043

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.29",
-    "glob": "^11.0.0",
+    "glob": "^10.4.5",
     "happy-dom": "^14.12.0",
     "npm-run-all2": "^6.2.3",
     "prettier": "^3.3.3",
@@ -86,6 +86,7 @@
     "eslint-config-prettier": "",
     "eslint-plugin-prettier": "",
     "eslint-plugin-vue": "",
+    "glob": "Kept at version 10 vecause 11.0.0 had a bad engine specifier that skipped node 21",
     "prettier": "",
     "sass": "https://github.com/sass/dart-sass/blob/main/CHANGELOG.md",
     "vite": "https://github.com/vitejs/vite/blob/main/packages/vite/CHANGELOG.md",
