[REF] Move jquery-treetable in new js built in system --- * [REF] Move jquery-treetable in new js built in system
See merge request tikiwiki/tiki!6107

--- a/src/js/common-externals/package.json
+++ b/src/js/common-externals/package.json
@@ -30,6 +30,7 @@
     "jquery-migrate": "^3.4.1",
     "jquery-ui": "^1.13.2",
     "jquery-validation": "1.20.0",
+    "jquery-treetable": "^3.2.0-1",
     "jquery-zoom": "^1.7.21",
     "mermaid": "^10.9.1",
     "moment": "^2.30.1",
