--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@stylistic/eslint-plugin-js": "^2.9.0",
     "@testing-library/vue": "^8.1.0",
     "@vitejs/plugin-vue": "^5.1.4",
-    "@vitest/coverage-v8": "^2.1.2",
+    "@vitest/coverage-istanbul": "^2.1.2",
     "check-engines": "^1.6.0",
     "concurrently": "^9.0.1",
     "es-module-shims": "^1.10.0",
