--- a/src/js/common-externals/package.json
+++ b/src/js/common-externals/package.json
@@ -38,6 +38,7 @@
     "select2-bootstrap-5-theme": "^1.3",
     "pivottable": "^2.23.0",
     "plotly.js": "^1.58.4",
+    "reveal.js": "5.1.0",
     "sortablejs": "=1.14.0",
     "subtotal": "^1.11.0-alpha.0",
     "svg-pan-zoom": "^3.6.1",
