--- a/src/js/common-externals/package.json
+++ b/src/js/common-externals/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.30.1",
     "select2": "^4.1.0-RC.0",
     "select2-bootstrap-5-theme": "^1.3",
+    "signature_pad": "^5.0.4",
     "pivottable": "^2.23.0",
     "plotly.js": "^1.58.4",
     "reveal.js": "5.1.0",
