--- a/src/js/common-externals/package.json
+++ b/src/js/common-externals/package.json
@@ -33,6 +33,7 @@
     "jquery-treetable": "^3.2.0-1",
     "jquery-zoom": "^1.7.21",
     "mermaid": "^10.9.1",
+    "minicart": "^3.0.6",
     "moment": "^2.30.1",
     "select2": "^4.1.0-RC.0",
     "select2-bootstrap-5-theme": "^1.3",
