[FIX] Adapt Tiki's Cypht integration to the new routing system and js libs exclusion mechanism introduced upstream --- * cleanup
* [FIX] Adapt Tiki's Cypht integration to the new routing system and js libs exclusion mechanism introduced upstream

See merge request tikiwiki/tiki!6176

--- a/lib/cypht/.env
+++ b/lib/cypht/.env
@@ -186,3 +186,5 @@ RECAPTCHA_SECRET=
 RECAPTCHA_SITE_KEY=
 
 CYPHT_MODULES="core,contacts,imap,smtp,nux,developer,history,saved_searches,advanced_search,profiles,inline_message,imap_folders,keyboard_shortcuts,site,dynamic_login,sievefilters,tiki"
+
+JS_EXCLUDE_DEPS=cash,bootstrap
