[FIX] Webmail: patch single-spa to prevent rewriting of history.pushState() and history.replaceState() --- * [FIX] Webmail: patch single-spa to prevent rewriting of history.pushState() and history.replaceState()
See merge request tikiwiki/tiki!6311

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "clean": "concurrently \"npm:clean:*\"",
     "build:generateIconList": "node lib/iconGeneratorNodeWrapper.js",
     "test": "vitest --config=src/js/vite.config.mjs --coverage",
-    "testci": "vitest --config=src/js/vite.config.mjs --coverage --run"
+    "testci": "vitest --config=src/js/vite.config.mjs --coverage --run",
+    "postinstall": "patch-package --patch-dir=src/js/patches",
+    "patch": "patch-package --patch-dir=src/js/patches"
   },
   "engines": {
     "npm": ">=9.0.0 <11",
@@ -73,6 +75,7 @@
     "glob": "^10.4.5",
     "happy-dom": "^15.11.0",
     "npm-run-all2": "^6.2.3",
+    "patch-package": "^8.0.0",
     "prettier": "^3.3.3",
     "rollup-plugin-visualizer": "^5.12.0",
     "unplugin-auto-import": "^0.18.3",
