[ENH] RecordRTC has been bundled in Tiki --- * [ENH] RecordRTC has been bundled in Tiki
This merge request bundles the RecordRTC package directly with Tiki, eliminating the need to fetch it as an external dependency.
This approach streamlines installation, reduces external dependencies, and ensures RecordRTC is readily available within Tiki.

**Key Changes:**
- **Bundling RecordRTC:** Added RecordRTC to Tiki’s npm build system, allowing it to be compiled and deployed as part of the Tiki codebase.
- **Deprecating External RecordRTC Package:** Marked RecordRTC as deprecated in the Tiki packages configuration with a note indicating it is now bundled with Tiki.

See merge request tikiwiki/tiki!6323

--- a/lib/core/Tiki/Package/ComposerPackages.yml
+++ b/lib/core/Tiki/Package/ComposerPackages.yml
@@ -182,6 +182,9 @@ PhpReadability:
     - "Fetch page content"
   requiredVersion: ^2.0.3
 RecordRTC:
+  state: deprecated
+  actions:
+    - remove
   licence: MIT
   licenceUrl: "https://github.com/muaz-khan/recordrtc/blob/master/LICENSE"
   name: npm-asset/recordrtc
