--- a/src/js/common-externals/package.json
+++ b/src/js/common-externals/package.json
@@ -36,6 +36,7 @@
     "mermaid": "^10.9.1",
     "minicart": "^3.0.6",
     "moment": "^2.30.1",
+    "recordrtc": "^5.6.2",
     "nestedSortable": "^1.3.4",
     "select2": "^4.1.0-RC.0",
     "select2-bootstrap-5-theme": "^1.3",
