--- a/src/js/common-externals/package.json
+++ b/src/js/common-externals/package.json
@@ -47,6 +47,7 @@
     "sortablejs": "=1.14.0",
     "subtotal": "^1.11.0-alpha.0",
     "svg-pan-zoom": "^3.6.1",
+    "tablesorter": "^2.32.0",
     "vue": "^3.5.12"
   },
     "devDependenciesComment": {
