[NEW] Add CI job for database upgrade to version 28 with MySQL support --- * [NEW] Add CI job for database upgrade to version 28 with MySQL support
This merge request adds a new CI job to test database upgrades to version 28 using MySQL8, ensuring compatibility and robustness for the latest Tiki version.

See merge request tikiwiki/tiki!6375

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -389,6 +389,14 @@ composer-could-update-lock:
       command: [ "--default-authentication-plugin=mysql_native_password", "--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci"]
       alias: mysql
 
+db-upgrade-28-mysql:
+  <<: *template-tiki-schema-upgrade-mysql8
+  variables:
+    DBFILE: ci_28.sql
+    DBVER: 28
+    IMAGE: ${MYSQL_IMAGE_NEWEST_SUPPORTED}
+    ENGINE: InnoDB
+
 db-upgrade-27-mysql:
   <<: *template-tiki-schema-upgrade-mysql8
   variables:
