--- a/src/js/common-externals/package.json
+++ b/src/js/common-externals/package.json
@@ -36,8 +36,9 @@
     "mermaid": "^10.9.1",
     "minicart": "^3.0.6",
     "moment": "^2.30.1",
-    "recordrtc": "^5.6.2",
     "nestedSortable": "^1.3.4",
+    "recordrtc": "^5.6.2",
+    "sass-svg-uri": "^2.0.0",
     "select2": "^4.1.0-RC.0",
     "select2-bootstrap-5-theme": "^1.3",
     "signature_pad": "^5.0.4",
